--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -1,33 +1,37 @@
-/* Formatting breaks down at screen widths of 69 pixels and below */
-
 /* Overall Page Style */
 .welcome__bg {
-  position: fixed;
-  height: 100vh;
-  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
   margin: 0;
   background-image: var(--welcome-bg-file);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: right;
   background-size: cover;
   z-index: -999;
+  max-height: 1080px;
 }
 
 /* General placement of container of main content */
 .welcome__content {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 100px;
+  padding-top: 125px;
+  height: 100%;
+  max-height: 1080px;
+  min-width: 0;
   width: 100%;
-  max-width: 1000px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 40vh;
-  padding-bottom: 20px;
+  max-width: 100%;
   box-sizing: border-box;
 }
 
 #welcome__content__text-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   margin-top: 8px;
   text-align: left;
 }
@@ -43,88 +47,75 @@
   padding: 0;
   display: inline;
   margin: 0;
+  text-align: center;
 }
-.welcome__content__about-link {
-  opacity: 0.6;
-  width: 100vw;
-  max-width: 100%;
-  font-size: 3vw;
-  color: white;
-  font-size: 1rem;
-  padding: 0;
-  margin: 0;
-  text-align: left;
+.welcome__text--link {
   text-decoration: underline;
-  display: inline;
-}
-#welcome__content__about-link:hover {
   cursor: pointer;
-}
-.welcome__content__image-attribution-link {
-  text-decoration: underline;
 }
 .welcome__content__header {
   padding: 0;
   margin: 0;
   color: white;
   margin: 0px;
-  font-size: 26.5vw;
+  font-size: 9.6rem;
   text-align: left;
   margin-bottom: -10px;
-  margin-left: -0.07em;
+  text-align: center;
 }
+
 .welcome__content__subheader {
   padding: 0;
   margin: 0;
   color: white;
   margin: 0px;
-  font-size: 9.4vw;
+  font-size: 3.6rem;
   text-align: left;
   font-weight: normal;
-  margin-left: -0.085em;
+  text-align: center;
 }
 
-@media screen and (max-width: 466px) {
+@media screen and (min-width: 725px) and (max-width: 832px) {
   .welcome__content__header {
-    font-size: 25.5vw;
+    font-size: calc(23.2vw - 40px);
   }
   .welcome__content__subheader {
-    font-size: 8.4vw;
+    font-size: calc(11.7vw - 40px);
   }
 }
 
-@media screen and (min-width: 467px) and (max-width: 810px) {
+@media screen and (min-width: 450px) and (max-width: 725px) {
   .welcome__content__header {
-    font-size: 17.5vw;
+    font-size: 8rem;
   }
   .welcome__content__subheader {
-    font-size: 6.4vw;
+    font-size: 44.5px;
   }
 }
-
-@media screen and (min-width: 811px) {
-  /* General placement of container of main content */
-  .welcome__content {
-    padding-left: 80px;
-  }
+@media screen and (max-width: 450px) {
   .welcome__content__header {
-    font-size: 8.5rem;
+    font-size: calc(37vw - 40px);
+    margin-left: -0.07em;
   }
   .welcome__content__subheader {
-    font-size: 3rem;
+    font-size: 9.6vw;
+    margin-left: -0.085em;
   }
 }
-
 .welcome__content__buttons {
   margin: 0;
+  min-width: 0;
   width: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
   gap: 15px;
 }
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 335px) {
   .welcome__content__buttons {
     display: flex;
     flex-direction: column;
