Moved welcome info onto about page, added fixed and transparent options to navbar

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,7 @@
 :root {
+  /* Globals */
+  --navbar-height: 70px;
+
   /* General color palette */
   --color-primary: #3c006b;
   --accent-main: var(--color-primary);
