--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,3 +1,7 @@
+.navbar__padding {
+  height: var(--navbar-height);
+}
+
 .navbar__container {
   display: flex;
   flex-direction: column;
@@ -7,46 +11,54 @@
   padding-bottom: 5px;
   padding-left: 20px;
   padding-right: 20px;
+  height: var(--navbar-height);
   width: 100%;
   box-sizing: border-box;
+}
+.navbar__container--fixed {
+  position: fixed;
 }
 
 .navbar__background {
-  background: var(--color-primary);
+  background: transparent;
   position: sticky;
   width: 100%;
   max-width: 100%;
+  height: 100%;
   top: 0;
   z-index: 700;
   border-radius: 300px;
-  border: 2px solid var(--color-primary-inverse);
   box-sizing: border-box;
 }
 
-.navbar {
-  --navbar-height: 35px;
-  --navbar-vpadding: 10px;
+.navbar__background--transparent {
+  background: var(--color-primary);
+  border: 2px solid var(--color-primary-inverse);
+}
 
+.navbar {
   color: var(--color-primary-inverse);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  min-width: 600px;
-  width: 70%;
-  margin: auto;
-  padding: var(--navbar-vpadding) 0;
   align-items: center;
-  height: var(--navbar-height);
+  min-width: 600px;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  box-sizing: border-box;
 }
 
 .navbar--mobile {
   min-width: 0;
-  width: 90%;
+  width: 100%;
 }
 
 .navbar-dropdown-mobile {
   position: absolute;
-  top: calc(2 * var(--navbar-vpadding) + var(--navbar-height));
+  top: var(--navbar-height);
   left: 0;
   width: 100%;
   background-color: var(--color-primary);
@@ -71,7 +83,7 @@
 }
 
 .navbar__mobile-button {
-  background-color: var(--color-primary);
+  background-color: transparent;
   border: none;
 }
 .navbar__mobile-button:hover {
