Cleaned up navbar code and updated theme

--- a/src/styles/Map.css
+++ b/src/styles/Map.css
@@ -1,9 +1,8 @@
 .map-container {
   position: fixed;
-  top: 67px;
   min-height: 0;
-  height: calc(100vh - 67px);
-  max-height: calc(100vh - 67px);
+  height: 100vh;
+  max-height: 100vh;
   min-width: 0;
   width: 100%;
   max-width: 100%;
