--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -3,41 +3,44 @@
 }
 
 .navbar__container {
+  --navbar--color-primary: var(--color-primary);
+  --navbar--background: var(--color-primary-inverse);
+  color: var(--navbar--color-primary);
+
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 10px;
-  padding-bottom: 5px;
-  padding-left: 10px;
-  padding-right: 10px;
+
   height: var(--navbar-height);
   width: 100%;
+
+  padding: 10px;
   box-sizing: border-box;
+  z-index: 700;
 }
 .navbar__container--fixed {
   position: fixed;
 }
+.navbar__container--transparent {
+  --navbar--color-primary: white;
+  --navbar--background: transparent;
+}
 
 .navbar__background {
-  background: transparent;
+  background: var(--navbar--background);
   position: sticky;
   width: 100%;
   max-width: 100%;
   height: 100%;
   top: 0;
-  z-index: 700;
   border-radius: var(--standard-border-radius);
-  box-sizing: border-box;
-}
-
-.navbar__background--transparent {
-  background: var(--color-primary);
+  border: 1px solid var(--navbar--color-primary);
   box-sizing: border-box;
 }
 
 .navbar {
-  color: var(--color-primary-inverse);
+  color: var(--navbar--text);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -51,17 +54,34 @@
   box-sizing: border-box;
 }
 
+.navbar--transparent {
+  color: white;
+}
+
 .navbar--mobile {
   min-width: 0;
   width: 100%;
 }
+.navbar__links--separator {
+  border-bottom: 0.5px solid var(--color-primary);
+  width: 100%;
+  max-width: 150px;
+  align-self: center;
+}
 
 .navbar-dropdown-mobile {
-  width: 100%;
-  background-color: var(--color-primary);
+  /* Adjust pos and width to ignore parent border and be as wide as it */
+  position: absolute;
+  left: -1px;
+  width: calc(100% + 2px);
+
+  margin-top: 10px;
+  margin-left: auto;
+  background-color: var(--color-primary-inverse);
+  color: var(--color-primary);
   z-index: 701;
-  padding: 10px 0 20px 0;
-  border: 2px solid var(--color-primary-inverse);
+  padding: 10px;
+  border: 1px solid var(--color-primary);
   border-radius: var(--standard-border-radius);
   box-sizing: border-box;
 }
@@ -76,10 +96,11 @@
   font-size: 1.4rem;
 }
 .navbar__title:hover {
-  background-color: var(--color-primary);
+  background-color: var(--navbar--background);
   cursor: pointer;
-  filter: brightness(80%);
+  filter: brightness(90%);
   border-radius: 10px;
+  text-decoration: underline;
 }
 
 .navbar__mobile-button {
@@ -88,14 +109,14 @@
 }
 .navbar__mobile-button:hover {
   cursor: pointer;
-  filter: brightness(80%);
+  filter: brightness(90%);
   border-radius: 10px;
 }
 .navbar__cross {
-  fill: var(--color-primary-inverse);
+  fill: var(--navbar--color-primary);
 }
 .navbar__hamburger {
-  fill: var(--color-primary-inverse);
+  fill: var(--navbar--color-primary);
 }
 
 .navbar__links {
@@ -113,13 +134,14 @@
 }
 
 .navbar__link--active {
-  opacity: 0.6;
+  font-weight: bold;
 }
 
 .navbar__link:hover {
-  background-color: var(--color-primary);
-  filter: brightness(75%);
+  background-color: var(--navbar--background);
+  filter: brightness(95%);
   border-radius: 10px;
+  text-decoration: underline;
 }
 
 .navbar__links--mobile {
@@ -133,5 +155,5 @@
 
 .hamburger-menu {
   height: 400px;
-  background-color: var(--color-primary);
+  background-color: var(--navbar--background);
 }
