--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -70,24 +70,25 @@
 }
 
 .navbar-dropdown-mobile {
-  /* Adjust pos and width to ignore parent border and be as wide as it */
-  position: absolute;
-  left: -1px;
-  width: calc(100% + 2px);
-
-  margin-top: 10px;
-  margin-left: auto;
   background-color: var(--color-primary-inverse);
   color: var(--color-primary);
-  z-index: 701;
-  padding: 10px;
-  border: 1px solid var(--color-primary);
-  border-radius: var(--standard-border-radius);
-  box-sizing: border-box;
-}
 
-.navbar__hamburger-button {
-  height: 30px;
+  width: 100%;
+  max-width: 200px;
+
+  margin-top: 5px;
+  margin-left: auto;
+  padding: 10px;
+
+  border-radius: var(--standard-border-radius);
+  border: 1px solid var(--color-primary);
+  z-index: 701;
+  box-sizing: border-box;
+
+  /* Adjust pos and width to ignore parent border and be as wide as it */
+  position: absolute;
+  right: -1px;
+  width: calc(100% + 2px);
 }
 
 .navbar__title {
@@ -104,18 +105,21 @@
 }
 
 .navbar__mobile-button {
-  background-color: transparent;
   border: none;
+  background-color: transparent;
+  height: 100%;
+  scale: 0.9;
 }
 .navbar__mobile-button:hover {
   cursor: pointer;
   filter: brightness(90%);
   border-radius: 10px;
-}
-.navbar__cross {
-  fill: var(--navbar--color-primary);
+  background-color: var(--navbar--background);
 }
 .navbar__hamburger {
+  fill: var(--navbar--color-primary);
+}
+.navbar__cross {
   fill: var(--navbar--color-primary);
 }
 
@@ -147,7 +151,7 @@
 .navbar__links--mobile {
   font-size: larger;
   flex-direction: column;
-  gap: 0.1rem;
+  gap: 0.15rem;
   max-width: 90%;
   margin-left: auto;
   margin-right: auto;
