--- a/src/styles/filters.css
+++ b/src/styles/filters.css
@@ -9,7 +9,10 @@
 
 .filters-option {
   flex: 1 0 34%;
+  max-width: 50%;
   margin-top: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .filters__button--save {
