--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -1,6 +1,9 @@
 .welcome__globals {
   --welcome--image--height: 700px;
 }
+.welcome__about-section {
+  background-color: red;
+}
 .welcome__about__text {
   display: inline;
   color: var(--color-text-basic);
@@ -12,6 +15,22 @@
 
 /* Overall Page Style */
 .welcome__bg {
+  position: fixed;
+
+  background-color: var(--bg-color);
+
+  top: 0;
+  left: 0;
+
+  min-width: 0;
+  width: 100vw;
+  max-width: 100vw;
+  min-height: 0;
+  height: 100vh;
+  max-height: 100vh;
+  z-index: -1000;
+}
+.welcome__header-bg {
   position: absolute;
   top: 0;
   left: 0;
@@ -27,6 +46,9 @@
   background-size: cover;
 
   z-index: -999;
+}
+.welcome__header-bg--dark {
+  background-image: var(--welcome-bg-dark-file);
 }
 
 /* General placement of container of main content */
@@ -114,4 +136,8 @@
   .welcome__content__buttons {
     flex-direction: column;
   }
+}
+
+.welcome__footer {
+  background-color: var(--card-color);
 }
