--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -8,6 +8,8 @@
 
 .footer__container {
   padding: 20px;
+  padding-bottom: 40px;
+  padding-top: 40px;
   min-width: 100%;
   width: 100%;
   max-width: 100%;
