--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -3,8 +3,10 @@
 }
 
 .navbar__container {
-  --navbar--color-header: var(--color-header);
-  --navbar--background: var(--card-color);
+  --navbar--color-header: var(--color-primary-inverse);
+  --navbar--background: var(--color-header);
+  --navbar--color-border: transparent;
+
   color: var(--navbar--color-header);
 
   display: flex;
@@ -15,7 +17,6 @@
   height: var(--navbar-height);
   width: 100%;
 
-  padding: 10px;
   box-sizing: border-box;
   z-index: 700;
 }
@@ -25,6 +26,7 @@
 .navbar__container--transparent {
   --navbar--color-header: white;
   --navbar--background: transparent;
+  --navbar--color-border: transparent;
 }
 
 .navbar__background {
@@ -34,13 +36,12 @@
   max-width: 100%;
   height: 100%;
   top: 0;
-  border-radius: var(--standard-border-radius);
-  border: 1px solid var(--navbar--color-header);
+  border: 1px solid var(--navbar--color-border);
   box-sizing: border-box;
 }
 
 .navbar {
-  color: var(--navbar--text);
+  color: var(--navbar--color-header);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
