--- a/src/styles/loading.css
+++ b/src/styles/loading.css
@@ -8,12 +8,24 @@
   max-width: 100vw;
   height: 100vh;
   max-height: 100vh;
-  background-color: var(--bg-color);
+  background-color: var(--card-color);
+}
+
+.loading__image {
+  width: 20vmin;
+  height: 20vmin;
+  animation: imageflicker 1.5s infinite alternate-reverse ease-in-out;
+}
+
+@keyframes imageflicker {
+  100% {
+    opacity: 10%;
+  }
 }
 
 .loading__text {
   text-align: center;
-  color: var(--color-secondary);
+  color: var(--color-header);
   font-size: 10vw;
   margin: 0;
   padding: 0;
