--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -1,43 +1,7 @@
-.welcome__globals {
-  --welcome--image--height: 700px;
-}
-.welcome__about-section {
-  background-color: red;
-}
-.welcome__about__text {
-  display: inline;
-  color: var(--color-text-basic);
-}
-.welcome__about__text--highlighted {
-  display: inline;
-  color: var(--color-subheader);
-}
-
-/* Overall Page Style */
-.welcome__bg {
-  position: fixed;
-
-  background-color: var(--bg-color);
-
-  top: 0;
-  left: 0;
-
-  min-width: 0;
-  width: 100vw;
-  max-width: 100vw;
-  min-height: 0;
-  height: 100vh;
-  max-height: 100vh;
-  z-index: -1000;
-}
-.welcome__header-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-
+.welcome {
+  height: 600px;
   width: 100%;
-  height: var(--welcome--image--height);
-  max-height: var(--welcome--image--height);
+  max-width: 100%;
 
   background-image: var(--welcome-bg-file);
   background-repeat: no-repeat;
@@ -45,39 +9,52 @@
   background-position: left;
   background-size: cover;
 
-  z-index: -999;
+  margin: 0;
+  box-sizing: border-box;
 }
-.welcome__header-bg--dark {
-  background-image: var(--welcome-bg-dark-file);
+.welcome__navbar {
+  width: 100%;
+  height: var(--navbar-height);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  box-sizing: border-box;
 }
-
-/* General placement of container of main content */
 .welcome__content {
   display: flex;
   flex-direction: column;
-  gap: 100px;
-
-  height: calc(var(--welcome--image--height) - var(--navbar-height));
-  min-width: 0;
+  justify-content: space-around;
+  height: 530px;
   width: 100%;
-  max-width: 100%;
-
-  margin: 0;
-  padding-top: 40px;
+  padding: 20px;
   box-sizing: border-box;
 }
 
-.welcome__content__header {
+.welcome__navbar__title {
   color: white;
-
-  text-align: center;
-  font-size: 9.6rem;
-
-  padding: 0;
   margin: 0;
+  font-size: 30px;
+  font-weight: bolder;
+}
+.welcome__navbar-button {
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  text-align: center;
+  padding: 7px;
+}
+.welcome__navbar-button:hover {
+  color: var(--color-primary);
+  cursor: pointer;
+  background-color: white;
+  border-radius: 10px;
 }
 
-.welcome__content__subheader {
+.welcome__header__heading {
   color: white;
 
   text-align: center;
@@ -87,33 +64,57 @@
   padding: 0;
   margin: 0;
 }
-
-@media screen and (min-width: 725px) and (max-width: 832px) {
-  .welcome__content__header {
-    font-size: calc(23.2vw - 40px);
-  }
-  .welcome__content__subheader {
-    font-size: calc(11.7vw - 40px);
-  }
+.welcome__header__text {
+  color: white;
+  font-weight: bolder;
 }
 
-@media screen and (min-width: 450px) and (max-width: 725px) {
-  .welcome__content__header {
-    font-size: 8rem;
-  }
-  .welcome__content__subheader {
-    font-size: 44.5px;
-  }
+.welcome__example__items {
+  width: 100%;
+  box-sizing: border-box;
 }
-@media screen and (max-width: 450px) {
-  .welcome__content__header {
-    font-size: calc(37vw - 40px);
-    margin-left: -0.07em;
-  }
-  .welcome__content__subheader {
-    font-size: 9.6vw;
-    margin-left: -0.085em;
-  }
+.welcome__about__bg {
+  background-color: white;
+}
+.welcome__about__text {
+  display: inline;
+  color: var(--color-text-basic);
+}
+.welcome__about__text--highlighted {
+  display: inline;
+  color: var(--color-subheader);
+}
+.welcome__example__header {
+  margin-top: 0;
+}
+.welcome__example__content {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.welcome__example {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  width: 100%;
+  max-width: 800px;
+  box-sizing: border-box;
+}
+.welcome__example--bg {
+  width: 100%;
+  max-width: 100%;
+  background-color: var(--card-color);
+}
+.welcome__example__text {
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.welcome__separator {
+  width: 100%;
+  height: 2px;
+  background-color: var(--card-color);
+  filter: brightness(200%);
 }
 
 .welcome__content__buttons {
@@ -140,4 +141,69 @@
 
 .welcome__footer {
   background-color: var(--card-color);
+}
+
+.team {
+  position: relative;
+  width: 180px;
+  height: 260px;
+  padding: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 20px;
+  box-sizing: border-box;
+}
+.team__photo--container {
+  width: 120px;
+  height: 120px;
+  box-sizing: border-box;
+  z-index: 1;
+}
+.team__photo {
+  --team-photo-border-width: 3px;
+  width: calc(100% - (2 * var(--team-photo-border-width)));
+  height: calc(100% - (2 * var(--team-photo-border-width)));
+  border-radius: 1000px;
+  border: var(--team-photo-border-width) solid var(--color-secondary);
+  object-fit: cover;
+  z-index: 1;
+}
+.team__name {
+  margin-top: 5px;
+  color: var(--color-header);
+  font-weight: bolder;
+  font-size: 1.65rem;
+  z-index: 1;
+  margin-bottom: 10px;
+  width: max-content;
+}
+.team__role {
+  color: var(--color-tertiary);
+  z-index: 1;
+  margin-bottom: 4px;
+}
+
+.welcome__attribution {
+  background-color: var(--card-color);
+  padding-top: 30px;
+}
+.welcome__attribution__header {
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+.welcome__attribution__team-card-holder {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
+  width: 100%;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
 }
