--- a/src/styles/welcomeButton.css
+++ b/src/styles/welcomeButton.css
@@ -7,7 +7,6 @@
 
 .welcome-button__text {
   color: white;
-
   min-width: 140px;
   width: max-content;
   max-width: max-content;
@@ -25,6 +24,7 @@
 }
 .welcome-button__text:hover {
   cursor: pointer;
+  filter: brightness(90%);
   background-color: white;
   color: var(--color-primary);
 }
@@ -33,16 +33,4 @@
   cursor: default;
   background-color: white;
   color: var(--color-primary);
-}
-
-@media screen and (max-width: 440px) {
-  .welcome-button {
-    width: 100%;
-    max-width: 400px;
-  }
-  .welcome-button__text {
-    min-width: 0 !important;
-    width: 100% !important;
-    max-width: 100% !important;
-  }
 }
