--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -113,7 +113,7 @@
 .welcome__separator {
   width: 100%;
   height: 2px;
-  background-color: var(--card-color);
+  background-color: var(--color-separator);
   filter: brightness(200%);
 }
 
