--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -36,7 +36,7 @@
 
   /* misc */
   --color-shadow: #90909080;
-  --color-separator: #7d7d7d;
+  --color-separator: #555555;
 
   /* General properties (UNRELATED TO THEMES) */
   --welcome-bg-file: url("../images/welcome-bg.jpg");
