--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -102,7 +102,7 @@
 .welcome__example--bg {
   width: 100%;
   max-width: 100%;
-  background-color: var(--card-color);
+  background-color: var(--welcome-bg-color);
 }
 .welcome__example__text {
   max-width: 700px;
@@ -140,7 +140,7 @@
 }
 
 .welcome__footer {
-  background-color: var(--card-color);
+  background-color: var(--welcome-bg-color);
 }
 
 .team {
@@ -187,7 +187,7 @@
 }
 
 .welcome__attribution {
-  background-color: var(--card-color);
+  background-color: var(--welcome-bg-color);
   padding-top: 30px;
 }
 .welcome__attribution__header {
