--- a/src/styles/ItemCards.css
+++ b/src/styles/ItemCards.css
@@ -22,11 +22,9 @@
   filter: brightness(100%) !important;
   cursor: default !important;
 }
-
-.item-card__disabled {
-  min-height: 122px !important;
-  height: 122px !important;
-  max-height: 122px !important;
+.item-card--disabled--mobile:hover {
+  filter: brightness(100%) !important;
+  cursor: default !important;
 }
 .item-card__image--container {
   display: flex;
@@ -104,9 +102,9 @@
   align-items: center;
   gap: 10px;
   padding: 15px;
-  min-height: 194px;
-  height: 194px;
-  max-height: 194px;
+  min-height: 122px !important;
+  height: 122px !important;
+  max-height: 122px !important;
   justify-content: space-between;
   pointer-events: all;
 }
@@ -141,10 +139,10 @@
 .item-card--mobile__header__content {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   min-width: 0;
   width: 100%;
   max-width: 100%;
+  gap: 4px;
   min-height: 0;
   height: 100%;
   max-height: 100%;
