--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -147,6 +147,7 @@
   filter: brightness(95%);
   border-radius: 10px;
   text-decoration: underline;
+  color: var(--card-color);
 }
 
 .navbar__links--mobile {
